# android-ndk

camera/: settings.gradle
camera/preview-read-image/src/main/cpp/: android_main.cpp  camera_manager.cpp  image_reader.cpp
hello-jni/app/src/main/cpp/: CMakeLists.txt
